--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="keywords" content="your name, industry, and specialties">
     
     <!-- Canonical URL - Helps prevent duplicate content issues -->
-    <meta rel="canonical" href="https://yourwebsite.com">
+    <meta rel="canonical" href="https://www.xuid0.vip">
     
     <!-- Author Information -->
     <meta name="author" content="Your Name">
