--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/x-icon" href="/images/avatar.png"> <!-- Update this with your own favicon -->
     
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="Replace this with your own, this appears in search results and when sharing.">
+    <meta name="description" content="xuid0's poor man's linktree using littlelink.io">
     
     <!-- Keywords -->
     <meta name="keywords" content="your name, industry, and specialties">
