--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="description" content="xuid0's poor man's linktree using littlelink.io">
     
     <!-- Keywords -->
-    <meta name="keywords" content="your name, industry, and specialties">
+    <meta name="keywords" content="I like to play PC games on Twitch and sometimes blog.">
     
     <!-- Canonical URL - Helps prevent duplicate content issues -->
     <meta rel="canonical" href="https://www.xuid0.vip">
