--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta rel="canonical" href="https://www.xuid0.vip">
     
     <!-- Author Information -->
-    <meta name="author" content="Your Name">
+    <meta name="author" content="xuid0">
     
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/reset.css">
