--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!-- Replace with your name or brand -->
             <h1>
-              <div>LittleLink</div>
+              <div>xuid0 Digital Business Card.</div>
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
